# file-preview

./: .cursorignore  .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  build.py  build.sh  docker-compose.yml  file-preview.spec  main.py  pyproject.toml  requirements.txt  test_result.xlsx  开发进度.md  需求文档.md
.github/workflows/: build.yml
config/: config.yaml
docs/: README.md  deployment.md  usage.md
docs/api/: convert.md  core.md  download.md  index.md  preview.md  status.md
docs/developer/: api.md  architecture.md  guide.md  setup.md
docs/guide/: api.md  configuration.md  deployment.md  developer.md  installation.md  quick-start.md  user.md
docs/user/: configuration.md  guide.md  installation.md  quickstart.md
file_preview/: __init__.py
file_preview/cli/: __init__.py  commands.py  main.py
file_preview/core/: __init__.py  cache.py  converter.py  downloader.py
file_preview/server/: __init__.py  app.py  routes.py  views.py
file_preview/server/api/: converter.py  converter_status.py  files.py  stats.py
file_preview/server/routes/: __init__.py  api.py  views.py
file_preview/utils/: __init__.py  config.py  file.py  file_processor.py  file_utils.py  logger.py  mapping.py  response.py  tasks.py  utils.py  utils_core.py
test_files/: test_doc.doc  test_docx.docx  test_xls.xls  test_xlsx.xlsx
tests/: README.md  conftest.py  test_remote_url.py  test_server.py  test_server_manual.py
tests/test_core/: test_cache.py  test_converter.py  test_downloader.py
tests/test_utils/: test_config.py  test_file.py  test_logger.py
(+20 files in other folders)
